# GameEngine

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt
.github/workflows/: ci.yml  docusaurus.yml
cmake/: GameEngineConfig.cmake.in
docusaurus/: README.md  docusaurus.config.ts  package-lock.json  package.json  sidebars.ts
docusaurus/docs/: intro.md  project-overview.md
docusaurus/docs/development/: build.md
docusaurus/docs/engine/: R-Type.drawio  architecture.md  audio-system.md  input-system.md  level-system.md  rendering-system.md  scripting-system.md
docusaurus/docs/network/: network-architecture.md  protocol.md
docusaurus/docs/technical/: editor.md  techno.md
docusaurus/docs/tutorials/: getting-started.md
docusaurus/src/components/HomepageFeatures/: index.tsx
docusaurus/src/pages/: index.tsx
examples/: README.md
include/GameEngine/: AudioEventTypes.hpp  ConsoleComponents.hpp  EcsManager.hpp  EngineBuilder.hpp  Entity.hpp  EventTypes.hpp  IComponent.hpp  ISystem.hpp  InputEventTypes.hpp  InputSystem.hpp  LevelLoader.hpp  LevelSystem.hpp  Logger.hpp  LoggerSystem.hpp  PrefabManager.hpp  RenderComponents.hpp  RenderEventTypes.hpp  Scripting.hpp  ScriptingHelpers.hpp
include/GameEngine/Components/: ColliderComponent.hpp  RigidBodyComponent.hpp
src/Core/: EcsManager.hpp  ISystem.hpp
src/Core/component/: ComponentsData.hpp  IComponent.hpp
src/Core/component/ComponentStorage/: ComponentStorage.hpp  IComponentStorage.hpp
src/Core/managers/: BusEventManager.hpp  ComponentManager.hpp  EntityManager.hpp  SystemManager.hpp
src/Scripting/: FileWatcher.cpp  FileWatcher.hpp  ScriptComponent.hpp  ScriptContext.cpp  ScriptContext.hpp  ScriptManager.cpp  ScriptManager.hpp
src/Systems/AudioSystem/: AudioSystem.cpp  AudioSystem.hpp
src/Systems/DeveloperConsoleSystem/: DeveloperConsoleSystem.cpp  DeveloperConsoleSystem.hpp
src/Systems/InputSystem/: InputBindingManager.cpp  InputBindingManager.hpp  InputManager.cpp  InputManager.hpp  InputState.cpp  InputState.hpp  InputSystem.cpp  InputSystem.hpp  SDLInputDevice.cpp  SDLInputDevice.hpp
src/Systems/LevelSystem/: LevelLoader.cpp  LevelLoader.hpp  LevelSystem.cpp  LevelSystem.hpp  LevelTypes.hpp  PrefabManager.cpp  PrefabManager.hpp
src/Systems/LoggerSystem/: LoggerSystem.cpp  LoggerSystem.hpp
src/Systems/NetworkSystem/: NetworkSystem.cpp  NetworkSystem.hpp
src/Systems/PhysicsSystem/: PhysicsSystem.cpp  PhysicsSystem.hpp
src/Systems/RenderSystem/: RenderSystem.cpp  RenderSystem.hpp
src/Systems/ScriptingSystem/: ScriptingSystem.cpp  ScriptingSystem.hpp
src/Systems/WindowSystem/: WindowSystem.cpp  WindowSystem.hpp
src/Utils/Audio/: AudioManager.cpp  AudioManager.hpp
src/Utils/Logger/: Logger.cpp  Logger.hpp
src/Utils/Network/: NetworkManager.cpp  NetworkManager.hpp  NetworkReceiver.cpp  NetworkReceiver.hpp
src/Utils/Physics/: PhysicsManager.cpp  PhysicsManager.hpp
src/Utils/Rendering/: RenderManager.cpp  RenderManager.hpp  wrapperSDL3.cpp  wrapperSDL3.hpp
src/Utils/Time/: TimeManager.cpp  TimeManager.hpp
